--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,9 +1,20 @@
 /*顶部导航栏*/
-.title{
-
+.title {
+    position: fixed;
+    width: 100%;
+    height: 50px;
 }
 
 /*左侧目录*/
-.menu{
-    width: 200px;
+.menu {
+    position: fixed;
+    left: 50px;
+    width: 220px;
+    height: 600px;
 }
+
+.center {
+    margin-left: 300px;
+    margin-top: 20px;
+}
+
