--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,6 +1,6 @@
 /*顶部导航栏*/
 .title {
-    top:0px;
+    top:0;
     position: fixed;
     width: 100%;
     height: 50px;
@@ -16,8 +16,6 @@
 }
 
 .center {
-    margin-left: 300px;
-    margin-right: 20px;
-    margin-top: 90px;
+    margin: 90px 20px 50px 300px;
 }
 
