--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -3,20 +3,32 @@
     top:0;
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: 70px;
     z-index: 100;
+    box-sizing: border-box;
+    font-size: 22px;
+    color: #111111;
+    background-color: #ffffff;
+    /*color: #fff;*/
+    /*background-color: #242f42;*/
 }
 
 /*左侧目录*/
 .menu {
     position: fixed;
-    left: 50px;
-    width: 220px;
-    height: 600px;
-    top:50px;
+    left: 0;
+    bottom: 0;
+    padding-top: 50px;
+    width: 300px;
+    height: 100%;
+    background-color: #ffffff;
+    /*background-color: #324157;*/
+    display: block;
+    overflow-y: scroll;
 }
 
 .center {
-    margin: 90px 20px 50px 300px;
+    background: #f0f0f0;
+    padding: 90px 20px 30px 320px;
 }
 
